--- a/.htaccess
+++ b/.htaccess
@@ -23,7 +23,7 @@ ErrorDocument 500 /assets/error-500.html
 <IfModule mod_rewrite.c>
 	SetEnv HTTP_MOD_REWRITE On
 	RewriteEngine On
-	RewriteBase '/ss3demo'
+	#RewriteBase '/ss3demo'
 
 
 	RewriteRule ^vendor(/|$) - [F,L,NC]
