Updated code from live site
Also improved read me, removed all module dependencies
since they weren't on live either.

--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,7 @@
 		"php": ">=5.3.2",
 		"silverstripe/cms": "3.1.x-dev",
 		"silverstripe/framework": "3.1.x-dev",
-		"silverstripe-themes/simple": "*",
-		"silverstripe/blog": "dev-master",
-		"silverstripe/forum": "dev-master",
-		"silverstripe/userforms": "dev-master",
-		"silverstripe/widgets": "dev-master"
+		"silverstripe-themes/simple": "*"
 	},
 	"config": {
 		"process-timeout": 600	
