--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 		"php": ">=5.3.2",
 		"silverstripe/cms": "3.1.x-dev",
 		"silverstripe/framework": "3.1.x-dev",
-		"silverstripe-themes/simple": "*"
+		"silverstripe-themes/simple": "*",
+		"silverstripe/raygun": "*@dev"
 	},
 	"config": {
 		"process-timeout": 600	
