--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -12,6 +12,9 @@ SSViewer:
 LeftAndMain:
   extra_requirements_javascript:
     - 'mysite/javascript/googleanalytics.js'
+    - 'mysite/javascript/calltoaction.js'
+  extra_requirements_css:
+    - 'mysite/css/calltoaction.css'
 SiteTree:
   nested_urls: true
 MySQLDatabase:
