increased constrast of Login bar

--- a/.htaccess
+++ b/.htaccess
@@ -31,8 +31,8 @@ ErrorDocument 500 /assets/error-500.html
 	RewriteRule silverstripe-cache(/|$) - [F,L,NC]
 	RewriteRule composer\.(json|lock) - [F,L,NC]
 
-	RewriteCond %{QUERY_STRING} flush
-	RewriteRule ^.*$ - [F]
+	#RewriteCond %{QUERY_STRING} flush
+	#RewriteRule ^.*$ - [F]
 
 	RewriteCond %{REQUEST_URI} ^(.*)$
 	RewriteCond %{REQUEST_FILENAME} !-f
