NEW: Add ss4 version of the demo site.

--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,15 @@
 	"description": "Demo SilverStripe Project",
 	"require": {
 		"php": ">=5.3.2",
-		"silverstripe/cms": "3.3.1@stable",
-		"silverstripe/framework": "3.3.1@stable",
-		"silverstripe/reports": "3.3.1@stable",
-		"silverstripe/siteconfig": "3.3.1@stable",
-		"silverstripe-themes/simple": "*",
-		"silverstripe/raygun": "*@dev",
-		"silverstripe/dynamodb": "~1.1"
+		"silverstripe/cms": "4.0.0-alpha1",
+		"silverstripe/framework": "4.0.0-alpha1",
+		"silverstripe/reports": "4.0.0-alpha1",
+		"silverstripe/siteconfig": "4.0.0-alpha1",
+		"silverstripe-themes/simple": "*@dev",
+		"silverstripe/dynamodb": "~1.1",
+		"silverstripe/crontask": "*@dev"
 	},
 	"config": {
-		"process-timeout": 600	
-	},
-	"minimum-stability": "dev"
+		"process-timeout": 600
+	}
 }
