--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"require": {
 		"php": ">=5.3.2",
 		"silverstripe/cms": "4.0.0-alpha1",
+		"silverstripe/asset-admin": "1.0.0-alpha1",
 		"silverstripe/framework": "4.0.0-alpha1",
 		"silverstripe/reports": "4.0.0-alpha1",
 		"silverstripe/siteconfig": "4.0.0-alpha1",
