--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -18,3 +18,6 @@ MySQLDatabase:
   connection_charset: 'utf8'
 Security:
   default_login_dest: '/admin/pages'
+File:
+  allowed_extensions:
+    - 'html'
