--- a/.htaccess
+++ b/.htaccess
@@ -23,16 +23,15 @@ ErrorDocument 500 /assets/error-500.html
 <IfModule mod_rewrite.c>
 	SetEnv HTTP_MOD_REWRITE On
 	RewriteEngine On
-	#RewriteBase '/ss3demo'
 
 
 	RewriteRule ^vendor(/|$) - [F,L,NC]
-	RewriteRule ^dev(/|$) - [F,L,NC]
+#	RewriteRule ^dev(/|$) - [F,L,NC]
 	RewriteRule silverstripe-cache(/|$) - [F,L,NC]
 	RewriteRule composer\.(json|lock) - [F,L,NC]
 
-	RewriteCond %{QUERY_STRING} flush
-	RewriteRule ^.*$ - [F]
+#	RewriteCond %{QUERY_STRING} flush
+#	RewriteRule ^.*$ - [F]
 
 	RewriteCond %{REQUEST_URI} ^(.*)$
 	RewriteCond %{REQUEST_FILENAME} !-f
