require main.css

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -8,7 +8,7 @@ After:
 # See http://doc.silverstripe.org/framework/en/topics/configuration
 # Caution: Indentation through two spaces, not tabs
 SSViewer:
-  theme: 'simple'
+  theme: 'demo'
 LeftAndMain:
   extra_requirements_javascript:
     - 'mysite/javascript/googleanalytics.js'
