--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,25 @@
 	"name": "silverstripe/demo.silverstripe.org",
 	"description": "Demo SilverStripe Project",
 	"require": {
-		"php": ">=5.3.2",
-		"silverstripe/cms": "4.0.0-alpha1",
-		"silverstripe/asset-admin": "1.0.0-alpha1",
-		"silverstripe/framework": "4.0.0-alpha1",
-		"silverstripe/reports": "4.0.0-alpha1",
-		"silverstripe/siteconfig": "4.0.0-alpha1",
+		"php": ">=5.6.0",
+		"silverstripe/admin": "1.0.0-alpha6",
+		"silverstripe/asset-admin": "1.0.0-alpha6",
+		"silverstripe/assets": "1.0.0-alpha6",
+		"silverstripe/campaign-admin": "1.0.0-alpha6",
+		"silverstripe/cms": "4.0.0-alpha6",
+		"silverstripe/config": "1.0.0-alpha6",
+		"silverstripe/framework": "4.0.0-alpha6",
+		"silverstripe/graphql": "0.2.2",
+		"silverstripe/reports": "4.0.0-alpha6",
+		"silverstripe/siteconfig": "4.0.0-alpha6",
+		"silverstripe/versioned": "1.0.0-alpha6",
 		"silverstripe-themes/simple": "*@dev",
 		"silverstripe/dynamodb": "~1.1",
 		"silverstripe/crontask": "*@dev"
 	},
 	"config": {
 		"process-timeout": 600
-	}
+	},
+	"prefer-stable": true,
+	"minimum-stability": "dev"
 }
