--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -1,23 +1,17 @@
 ---
 Name: mysite
-After:
-  - 'framework/*'
-  - 'cms/*'
 ---
-# YAML configuration for SilverStripe
-# See http://doc.silverstripe.org/framework/en/topics/configuration
-# Caution: Indentation through two spaces, not tabs
-SSViewer:
-  theme: 'simple'
-LeftAndMain:
+SilverStripe\View\SSViewer:
+  theme: simple
+SilverStripe\Admin\LeftAndMain:
   extra_requirements_javascript:
-    - 'mysite/javascript/googleanalytics.js'
-SiteTree:
+    - mysite/javascript/googleanalytics.js
+SilverStripe\CMS\Model\SiteTree:
   nested_urls: true
-MySQLDatabase:
-  connection_charset: 'utf8'
-Security:
-  default_login_dest: '/admin/pages'
-File:
+SilverStripe\ORM\Connect\MySQLDatabase:
+  connection_charset: utf8
+SilverStripe\Security\Security:
+  default_login_dest: /admin/pages
+SilverStripe\Assets\File:
   allowed_extensions:
-    - 'html'
+    - html
