--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "silverstripe/siteconfig": "~4.0.0@alpha",
         "silverstripe/versioned": "~1.0.0@alpha",
 		"silverstripe-themes/simple": "*@dev",
-		"silverstripe/dynamodb": "*@dev",
+		"silverstripe/dynamodb": "^3@dev",
 		"silverstripe/crontask": "*@dev"
 	},
 	"require-dev": {
