Using master instead of alpha6 to make installable on SSP
See https://github.com/silverstripe/silverstripe-framework/pull/6825

--- a/composer.json
+++ b/composer.json
@@ -3,17 +3,17 @@
 	"description": "Demo SilverStripe Project",
 	"require": {
 		"php": ">=5.6.0",
-		"silverstripe/admin": "~1.0.0@alpha",
-        "silverstripe/asset-admin": "~1.0.0@alpha",
-        "silverstripe/assets": "~1.0.0@alpha",
-        "silverstripe/campaign-admin": "~1.0.0@alpha",
-        "silverstripe/cms": "~4.0.0@alpha",
-        "silverstripe/config": "~1.0.0@alpha",
-        "silverstripe/framework": "~4.0.0@alpha",
-        "silverstripe/graphql": "~0.2.2@stable",
-        "silverstripe/reports": "~4.0.0@alpha",
-        "silverstripe/siteconfig": "~4.0.0@alpha",
-        "silverstripe/versioned": "~1.0.0@alpha",
+		"silverstripe/admin": "1.0.x-dev",
+        "silverstripe/asset-admin": "1.0.x-dev",
+        "silverstripe/assets": "1.0.x-dev",
+        "silverstripe/campaign-admin": "1.0.x-dev",
+        "silverstripe/cms": "4.0.x-dev",
+        "silverstripe/config": "1.0.x-dev",
+        "silverstripe/framework": "4.0.x-dev",
+        "silverstripe/graphql": "0.2.x-dev",
+        "silverstripe/reports": "4.0.x-dev",
+        "silverstripe/siteconfig": "4.0.x-dev",
+        "silverstripe/versioned": "1.0.x-dev",
 		"silverstripe-themes/simple": "*@dev",
 		"silverstripe/dynamodb": "^3@dev",
 		"silverstripe/crontask": "*@dev"
