Upgrading to silverstripe framework 4 alpha-7

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ raygun/
 silverstripe-dynamodb/
 crontask/
 asset-admin/
+campaign-admin/
+graphql/
+silverstripe-admin/
+silverstripe-assets/
+versioned/
