--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,18 @@
 	"description": "Demo SilverStripe Project",
 	"require": {
 		"php": ">=5.6.0",
-		"silverstripe/admin": "1.0.0-alpha7",
-		"silverstripe/asset-admin": "1.0.0-alpha7",
-		"silverstripe/assets": "1.0.0-alpha7",
-		"silverstripe/campaign-admin": "1.0.0-alpha7",
-		"silverstripe/cms": "4.0.0-alpha7",
-		"silverstripe/config": "1.0.0-alpha8",
-		"silverstripe/framework": "4.0.0-alpha7",
-		"silverstripe/graphql": "0.2.3@stable",
-		"silverstripe/reports": "4.0.0-alpha7",
-		"silverstripe/siteconfig": "4.0.0-alpha7",
-		"silverstripe/versioned": "1.0.0-alpha7",
-		"silverstripe-themes/simple": "~3.2.0",
+		"silverstripe/admin": "1.0.x-dev@dev",
+		"silverstripe/asset-admin": "1.0.x-dev@dev",
+		"silverstripe/assets": "1.0.x-dev@dev",
+		"silverstripe/campaign-admin": "1.0.x-dev@dev",
+		"silverstripe/cms": "4.0.x-dev@dev",
+		"silverstripe/config": "1.0.x-dev@dev",
+		"silverstripe/framework": "4.0.x-dev@dev",
+		"silverstripe/graphql": "0.2.x-dev@dev",
+		"silverstripe/reports": "4.0.x-dev@dev",
+		"silverstripe/siteconfig": "4.0.x-dev@dev",
+		"silverstripe/versioned": "1.0.x-dev@dev",
+		"silverstripe-themes/simple": "~3.2.0@dev",
 		"silverstripe/dynamodb": "dev-master",
 		"silverstripe/crontask": "dev-master"
 	},
@@ -29,7 +29,6 @@
 	"config": {
 		"process-timeout": 600
 	},
-	"prefer-stable": true,
-	"minimum-stability": "dev"
+	"minimum-stability": "stable"
 }
 
