--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,19 @@
 	"description": "Demo SilverStripe Project",
 	"require": {
 		"php": ">=5.6.0",
-		"silverstripe/admin": "1.0.x-dev@dev",
-		"silverstripe/asset-admin": "1.0.x-dev@dev",
-		"silverstripe/assets": "1.0.x-dev@dev",
-		"silverstripe/campaign-admin": "1.0.x-dev@dev",
-		"silverstripe/cms": "4.0.x-dev@dev",
-		"silverstripe/config": "1.0.x-dev@dev",
-		"silverstripe/framework": "4.0.x-dev@dev",
-		"silverstripe/graphql": "0.2.x-dev@dev",
-		"silverstripe/reports": "4.0.x-dev@dev",
-		"silverstripe/siteconfig": "4.0.x-dev@dev",
-		"silverstripe/versioned": "1.0.x-dev@dev",
-		"silverstripe-themes/simple": "~3.2.0@dev",
+		"silverstripe/admin": "^1.0@dev",
+		"silverstripe/asset-admin": "^1.0@dev",
+		"silverstripe/assets": "^1.0@dev",
+		"silverstripe/campaign-admin": "^1.0@dev",
+		"silverstripe/cms": "^4.0@dev",
+		"silverstripe/config": "^1.0@dev",
+        "silverstripe/errorpage": "^1.0@dev",
+		"silverstripe/framework": "^4.0@dev",
+		"silverstripe/graphql": "0.2.x-dev",
+		"silverstripe/reports": "^4.0@dev",
+		"silverstripe/siteconfig": "^4.0@dev",
+		"silverstripe/versioned": "^1.0@dev",
+		"silverstripe-themes/simple": "~3.2.0",
 		"silverstripe/dynamodb": "dev-master",
 		"silverstripe/crontask": "dev-master"
 	},
@@ -29,6 +30,6 @@
 	"config": {
 		"process-timeout": 600
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "dev",
+    "prefer-stable": true
 }
-
