--- a/.htaccess
+++ b/.htaccess
@@ -5,14 +5,8 @@
 	Allow from 127.0.0.1
 </Files>
 
-<Files web.config>
-	Order deny,allow
-	Deny from all
-</Files>
-
-# This denies access to all yml files, since developers might include sensitive
-# information in them. See the docs for work-arounds to serve some yaml files
-<Files *.yml>
+# Deny access to YAML configuration files which might include sensitive information
+<Files ~ "\.ya?ml$">
 	Order allow,deny
 	Deny from all
 </Files>
@@ -20,11 +14,13 @@
 ErrorDocument 404 /assets/error-404.html
 ErrorDocument 500 /assets/error-500.html
 
+<IfModule mod_alias.c>
+	RedirectMatch 403 /silverstripe-cache(/|$)
+</IfModule>
+
 <IfModule mod_rewrite.c>
 	SetEnv HTTP_MOD_REWRITE On
 	RewriteEngine On
-	#RewriteBase '/ss3demo'
-
 
 	RewriteRule ^vendor(/|$) - [F,L,NC]
 	RewriteRule ^dev(/|$) - [F,L,NC]
@@ -36,7 +32,6 @@ ErrorDocument 500 /assets/error-500.html
 
 	RewriteCond %{REQUEST_URI} ^(.*)$
 	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteCond %{REQUEST_URI} !\.php$
-	RewriteRule .* framework/main.php?url=%1&%{QUERY_STRING} [L]
+	RewriteRule .* framework/main.php?url=%1 [QSA]
 </IfModule>
 ### SILVERSTRIPE END ###
