--- a/.editorconfig
+++ b/.editorconfig
@@ -15,11 +15,8 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.yml]
+[*.{yml,js,json,css,scss,feature,eslintrc}]
 indent_size = 2
-indent_style = space
 
-[{.travis.yml,package.json}]
-# The indent size used in the `package.json` file cannot be changed
-# https://github.com/npm/npm/pull/3180#issuecomment-16336516
-indent_size = 2
+[composer.json]
+indent_size = 4
