--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": ">=5.6.0",
         "silverstripe/installer": "~4.0.0",
         "silverstripe/dynamodb": "3.0.x-dev",
-        "silverstripe/crontask": "*@dev"
+        "silverstripe/crontask": "*@dev",
+        "silverstripe/vendor-plugin-helper": "^1.0@dev"
     },
     "require-dev": {
         "phpunit/PHPUnit": "^5.7"
