--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,9 @@
     "description": "Demo SilverStripe Project",
     "require": {
         "php": ">=5.6.0",
-        "silverstripe/installer": "~4.0.0",
+        "silverstripe/installer": "~4.0.0@rc",
         "silverstripe/dynamodb": "3.0.x-dev",
-        "silverstripe/crontask": "*@dev",
-        "silverstripe/vendor-plugin-helper": "^1.0@dev"
+        "silverstripe/crontask": "*@dev"
     },
     "require-dev": {
         "phpunit/PHPUnit": "^5.7"
