--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 # ignore default modules from composer
 /assets/
 /resources/
+
+# ignore default theme
+/themes/simple/
+
+# ignore platform requirements
+/silverstripe-dynamodb/
