--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": ">=5.6.0",
         "silverstripe/installer": "~4.0.0@stable",
-        "silverstripe/dynamodb": "3.0.x-dev",
+        "silverstripe/dynamodb": "^4.0",
         "silverstripe/crontask": "*@dev"
     },
     "require-dev": {
