--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Demo SilverStripe Project",
     "require": {
         "php": ">=5.6.0",
-        "silverstripe/installer": "~4.0.0@stable",
+        "silverstripe/installer": "~4.1.0@stable",
         "silverstripe/dynamodb": "^4.0",
         "silverstripe/crontask": "*@dev"
     },
@@ -35,6 +35,17 @@
             "mysite/_config/theme.yml",
             "mysite/code/Page.php",
             "mysite/code/PageController.php",
+            "web.config"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "assets/.gitignore",
+            "assets/.htaccess",
+            "assets/web.config",
+            "favicon.ico",
+            "index.php",
+            "install-frameworkmissing.html",
+            "install.php",
             "web.config"
         ]
     }
