Upgrade to SS4.6.0

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Demo SilverStripe Project",
     "require": {
         "php": ">=7.1.0",
-        "silverstripe/installer": "4.5.2@stable",
+        "silverstripe/installer": "^4.6.0",
         "silverstripe/dynamodb": "^4.0",
         "silverstripe/crontask": "*@dev"
     },
@@ -19,12 +19,14 @@
     "prefer-stable": true,
     "minimum-stability": "dev",
     "extra": {
+        "resources-dir": "_resources",
         "project-files-installed": [
             ".env.example",
             ".htaccess",
             "app/.htaccess",
             "app/_config.php",
             "app/_config/assets.yml",
+            "app/_config/mimevalidator.yml",
             "app/_config/mysite.yml",
             "app/_config/theme.yml",
             "app/src/Page.php",
