--- a/mysite/_config/theme.yml
+++ b/mysite/_config/theme.yml
@@ -6,3 +6,10 @@ SilverStripe\View\SSViewer:
     - '/mysite'
     - 'simple'
     - '$default'
+
+SilverStripe\LoginForms\EnablerExtension:
+  login_themes:
+    - '$public'
+    - 'silverstripe/login-forms:login-forms'
+    - 'simple'
+    - '$default'
