--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,20 @@
     "name": "silverstripe/demo.silverstripe.org",
     "description": "Demo SilverStripe Project",
     "require": {
-        "php": ">=7.1.0",
-        "silverstripe/installer": "^4.7.0",
-        "silverstripe/dynamodb": "^4.0",
-        "silverstripe/crontask": "*@dev"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "php": ">=7.4.0",
+        "silverstripe/installer": "^4.11",
+        "silverstripe/dynamodb": "^4.1",
+        "silverstripe/crontask": "^2.5"
     },
     "config": {
         "process-timeout": 600,
         "platform": {
-            "php": "7.1.0"
+            "php": "7.4.0"
+        },
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/recipe-plugin": true,
+            "silverstripe/vendor-plugin": true
         }
     },
     "prefer-stable": true,
@@ -23,15 +25,16 @@
         "project-files-installed": [
             ".env.example",
             ".htaccess",
-            "app/.htaccess",
-            "app/_config.php",
-            "app/_config/assets.yml",
-            "app/_config/database.yml",
-            "app/_config/mimevalidator.yml",
-            "app/_config/mysite.yml",
-            "app/_config/theme.yml",
-            "app/src/Page.php",
-            "app/src/PageController.php",
+            "mysite/.htaccess",
+            "mysite/_config.php",
+            "mysite/_config/assets.yml",
+            "mysite/_config/database.yml",
+            "mysite/_config/email.yml",
+            "mysite/_config/mimevalidator.yml",
+            "mysite/_config/mysite.yml",
+            "mysite/_config/theme.yml",
+            "mysite/code/Page.php",
+            "mysite/code/PageController.php",
             "assets/.gitignore",
             "assets/.htaccess",
             "assets/web.config",
@@ -39,12 +42,6 @@
             "index.php",
             "install-frameworkmissing.html",
             "install.php",
-            "mysite/.htaccess",
-            "mysite/_config.php",
-            "mysite/_config/mysite.yml",
-            "mysite/_config/theme.yml",
-            "mysite/code/Page.php",
-            "mysite/code/PageController.php",
             "web.config"
         ],
         "public-files-installed": [
