MNT Upgrading to CMS 5 is easy

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,6 @@
 /vendor/
 
 # ignore default modules from composer
-/assets/
-/resources/
 /_resources/
 
 # ignore default theme
@@ -20,4 +18,5 @@
 
 # ignore graphql v4 schema folders
 /.graphql-generated/
-/_graphql/
+/public/_graphql/
+/public/assets/
