--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
             "silverstripe/vendor-plugin": true
         }
     },
+    "license": "BSD-3-Clause",
     "prefer-stable": true,
     "minimum-stability": "dev",
     "extra": {
