FIX Debug asset errors and reduce database clutter

--- a/.reset/assets_reset/web.config
+++ b/.reset/assets_reset/web.config
@@ -58,6 +58,7 @@ directory.
 					<add fileExtension=".mkv" allowed="true" />
 					<add fileExtension=".mp4" allowed="true" />
 					<add fileExtension=".ogv" allowed="true" />
+					<add fileExtension=".webp" allowed="true" />
 					<add fileExtension=".webm" allowed="true" />
 					<add fileExtension=".swf" allowed="true" />
 					<add fileExtension=".flv" allowed="true" />
